--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="ddiehl.android.imgurtest"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="ddiehl.android.imgurtest"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
   <application
       android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
