--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,9 +13,15 @@ android {
     versionName "1.0"
   }
   buildTypes {
+    debug {
+      buildConfigField "String", "IMGUR_CLIENT_ID", "\"" + IMGUR_CLIENT_ID + "\""
+      buildConfigField "String", "IMGUR_CLIENT_SECRET", "\"" + IMGUR_CLIENT_SECRET + "\""
+    }
     release {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      buildConfigField "String", "IMGUR_CLIENT_ID", "\"" + IMGUR_CLIENT_ID + "\""
+      buildConfigField "String", "IMGUR_CLIENT_SECRET", "\"" + IMGUR_CLIENT_SECRET + "\""
     }
   }
   sourceSets {
@@ -41,7 +47,9 @@ dependencies {
   compile "io.reactivex:rxjava:1.1.0"
   compile "io.reactivex:rxandroid:1.1.0"
   compile "io.reactivex:rxkotlin:0.40.1"
-}
-repositories {
-  mavenCentral()
+  compile "com.squareup.retrofit2:retrofit:2.0.0-beta4"
+  compile "com.squareup.retrofit2:converter-gson:2.0.0-beta4"
+  compile "com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4"
+  compile "com.squareup.picasso:picasso:2.5.2"
+  compile "com.github.damien5314:TimeSinceTextView:1.1.1"
 }
