--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="ddiehl.android.imgurtest"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <uses-permission android:name="android.permission.INTERNET" />
+
   <application
+      android:name=".CustomApplication"
       android:allowBackup="true"
       android:label="@string/app_name"
       android:supportsRtl="true"
