--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
   <uses-permission android:name="android.permission.INTERNET" />
 
   <application
-      android:name=".CustomApplication"
+      android:name=".ImgurApplication"
       android:allowBackup="true"
       android:label="@string/app_name"
       android:supportsRtl="true"
