--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
   compile "com.squareup.retrofit2:retrofit:2.0.0-beta4"
   compile "com.squareup.retrofit2:converter-gson:2.0.0-beta4"
   compile "com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4"
-  compile "com.squareup.picasso:picasso:2.5.2"
+//  compile "com.squareup.picasso:picasso:2.5.2"
+  compile 'com.github.bumptech.glide:glide:3.7.0'
   compile "com.github.damien5314:TimeSinceTextView:1.1.1"
 }
