--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'kotlin-android'
 
 android {
@@ -54,6 +53,6 @@ dependencies {
 //  compile "com.squareup.picasso:picasso:2.5.2"
   compile 'com.github.bumptech.glide:glide:3.7.0'
   compile "com.github.damien5314:TimeSinceTextView:1.1.1"
-  compile 'org.parceler:parceler-api:1.0.4'
-  apt 'org.parceler:parceler:1.0.4'
+//  compile 'org.parceler:parceler-api:1.0.4'
+//  apt 'org.parceler:parceler:1.0.4'
 }
