--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,12 @@ dependencies {
   compile "org.jetbrains.anko:anko-support-v4:$anko_version"
   compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
   compile "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
+  compile "org.jetbrains.anko:anko-cardview-v7:$anko_version"
 //  compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   compile "com.android.support:support-v4:$support_version"
   compile "com.android.support:support-annotations:$support_version"
   compile "com.android.support:recyclerview-v7:$support_version"
+  compile "com.android.support:cardview-v7:$support_version"
   compile "com.android.support:design:$support_version"
   compile "com.android.support:appcompat-v7:$support_version"
   compile "com.jakewharton.timber:timber:4.1.0"
@@ -53,6 +55,6 @@ dependencies {
 //  compile "com.squareup.picasso:picasso:2.5.2"
   compile 'com.github.bumptech.glide:glide:3.7.0'
   compile "com.github.damien5314:TimeSinceTextView:1.1.1"
-//  compile 'org.parceler:parceler-api:1.0.4'
-//  apt 'org.parceler:parceler:1.0.4'
+  compile 'org.parceler:parceler-api:1.0.4'
+  kapt 'org.parceler:parceler:1.0.4'
 }
