--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
   compile "org.jetbrains.anko:anko-sdk19:$anko_version"
   compile "org.jetbrains.anko:anko-support-v4:$anko_version"
   compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+  compile "org.jetbrains.anko:anko-design:$anko_version"
   compile "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
   compile "org.jetbrains.anko:anko-cardview-v7:$anko_version"
 //  compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
